2008-08-06  Werner Koch  <wk@g10code.com>

	Release 0.10.15.

	* forms/sign-l.ico, forms/sign-s.ico: New.
	* forms/encr-l.ico, forms/encr-s.ico: New

2008-08-04  Werner Koch  <wk@g10code.com>

	* Makefile.am (SUBDIRS): Add forms.
	* forms/Makefile.am: New.
	* forms/gpgol_de.cfg, forms/gpgol-ms_de.cfg: New.
	
2008-06-04  Werner Koch  <wk@g10code.com>

	* doc/gpgol.texi (Assuan Protocol): Remove protocol specs.  They
	are now part of the GPGME manual.

2008-05-28  Werner Koch  <wk@g10code.com>

	* Release 0.10.14.

2008-05-06  Werner Koch  <wk@g10code.com>

	* Release 0.10.13.

2008-04-16  Werner Koch  <wk@g10code.com>

	* Release 0.10.12.

2008-04-04  Werner Koch  <wk@g10code.com>

	* Release 0.10.11.

2008-04-02  Werner Koch  <wk@g10code.com>

	* Release 0.10.10.

2008-04-01  Werner Koch  <wk@g10code.com>

	* configure.ac (AC_INIT): Fix quoting.

2008-03-19  Werner Koch  <wk@g10code.com>

	* Release 0.10.9.

2008-03-18  Werner Koch  <wk@g10code.com>

	* Release 0.10.8.

2008-03-11  Werner Koch  <wk@g10code.com>

	* Release 0.10.7.

2008-03-10  Werner Koch  <wk@g10code.com>

	* Release 0.10.6.

2008-03-07  Werner Koch  <wk@g10code.com>

	* configure.ac (SVN_REVISION): New AC_DEFINE.

2008-03-06  Werner Koch  <wk@g10code.com>

	* doc/gpgol.texi (SIGN): Extend the SIGNER command to allow
	suggestion of a protocol.

2008-02-18  Werner Koch  <wk@g10code.com>

	Release 0.10.5 development version.

2008-02-15  Werner Koch  <wk@g10code.com>

	* po/de.po: Describe more explicit on how to start the UI-server.

2008-02-06  Werner Koch  <wk@g10code.com>

	Released 0.10.4 development version.

2007-12-10  Werner Koch  <wk@g10code.com>

	Released 0.10.3 development version.

2007-11-12  Werner Koch  <wk@g10code.com>

	Released 0.10.2 development version.

2007-10-22  Werner Koch  <wk@g10code.com>

	Released 0.10.1 development version.

2007-10-12  Werner Koch  <wk@g10code.com>

	* po/POTFILES.in: Add more files.

2007-10-11  Werner Koch  <wk@g10code.com>
