@@ -1,3 +1,7 @@
+2008-10-27  Werner Koch  <wk@g10code.com>
+
+	* forms/gpgol-cs_de.cfg: New. 
+
 2008-08-06  Werner Koch  <wk@g10code.com>
 
 	Release 0.10.15.
